# Dora_AI

./: .gitignore  README.md  Speech_to_text.py  ai_agent.py  app.py  pyproject.toml  requirement.txt  text_to_speech.py  tools.py  webcam_manager.py
